--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,79 @@
 <body>
 
     <header class="header">
-        <h1>Заголовок</h1>
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a class="menu__link" href="#">Магазины</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="#">Акции</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="#">Доставка и оплата</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a class="logo" href="#">
+                        <img src="img/logo.svg" alt="" class="logo__img">
+                    </a>
+                    <div class="header__box">
+                        <p class="header__address">Москва,  ул. Науки  25</p>
+                        <ul class="user-list">
+                            <li class="user-list__item">
+                                <a class="user-list__link" href="#">
+                                    <img src="img/heart-icon.svg" alt="">
+                                </a>
+                            </li>
+                            <li class="user-list__item">
+                                <a class="user-list__link" href="#">
+                                    <img src="img/user-icon.svg" alt="">
+                                </a>
+                            </li>
+                            <li class="user-list__item">
+                                <a class="user-list__link basket" href="#">
+                                    <img src="img/basket-icon.svg" alt="">
+                                    <p class="basket__num">1</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header__bottom">
+            <div class="container">
+                <ul class="menu-categories">
+                    <li class="menu-categories__item">
+                        <a class="menu-categories__link" href="#">Квадроциклы</a>
+                    </li>
+                    <li class="menu-categories__item">
+                        <a class="menu-categories__link" href="#">Катера</a>
+                    </li>
+                    <li class="menu-categories__item">
+                        <a class="menu-categories__link" href="#">Гидроциклы</a>
+                    </li>
+                    <li class="menu-categories__item">
+                        <a class="menu-categories__link" href="#">Лодки</a>
+                    </li>
+                    <li class="menu-categories__item">
+                        <a class="menu-categories__link" href="#">Вездеходы</a>
+                    </li>
+                    <li class="menu-categories__item">
+                        <a class="menu-categories__link" href="#">Снегоходы</a>
+                    </li>
+                    <li class="menu-categories__item">
+                        <a class="menu-categories__link" href="#">Двигатели</a>
+                    </li>
+                    <li class="menu-categories__item">
+                        <a class="menu-categories__link" href="#">Запчасти</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
