--- a/source/index.html
+++ b/source/index.html
@@ -85,6 +85,48 @@
         </div>
     </header>
 
+    <section class="banner-section">
+        <div class="container">
+            <div class="banner-section__inner">
+                <div class="banner-section__slider">
+                    <a class="banner-section__slider-item" href="#">
+                        <img class="bunner-section__slider-img" src="img/slider-img.jpg" alt="">
+                    </a>
+                    <a class="banner-section__slider-item" href="#">
+                        <img class="bunner-section__slider-img" src="img/slider-img.jpg" alt="">
+                    </a>
+                    <a class="banner-section__slider-item" href="#">
+                        <img class="bunner-section__slider-img" src="img/slider-img.jpg" alt="">
+                    </a>
+                    <a class="banner-section__slider-item" href="#">
+                        <img class="bunner-section__slider-img" src="img/slider-img.jpg" alt="">
+                    </a>
+                    <a class="banner-section__slider-item" href="#">
+                        <img class="bunner-section__slider-img" src="img/slider-img.jpg" alt="">
+                    </a>
+                    <a class="banner-section__slider-item" href="#">
+                        <img class="bunner-section__slider-img" src="img/slider-img.jpg" alt="">
+                    </a>
+                </div>
+                <a class="banner-section__item sale-item" href="#">
+                    <div class="sale-item__top">
+                        <p class="sale-item__info">акция</p>
+                        <div class="sale-item__price">
+                            <div class="price sale-item__price-new">190 000</div>
+                            <div class="price sale-item__price-old">225 000</div>
+                        </div>
+                    </div>
+                    <img class="sale-item__img" src="img/content/sale-1.png" alt="">
+                    <h5 class="sale-item__title">Лодочный мотор Suzuki DF9.9BRS</h5>
+                    <p class="sale-item__footer">
+                        Акция действует до
+                        <span>31.08.2020</span>
+                    </p>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
