--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
         </div>
     </header>
 
-    <section class="banner-section">
+    <section class="banner-section page-section">
         <div class="container">
             <div class="banner-section__inner">
                 <div class="banner-section__slider">
@@ -123,6 +123,38 @@
                         <span>31.08.2020</span>
                     </p>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="search page-section">
+        <div class="container">
+            <div class="search__inner">
+                <div class="search__tabs">
+                    <a class="search__tabs-item search__tabs-item--active" href="#tab-1">Поиск по  номеру</a>
+                    <a class="search__tabs-item" href="#tab-2">Поиск по марке</a>
+                    <a class="search__tabs-item" href="#tab-3">Поиск по названию товара</a>
+                </div>
+                <div class="search__content">
+                    <div class="search__content-item search__content-item--active" id="tab-1">
+                        <form class="search__content-form" action="#">
+                            <input class="search__content-input" type="text" placeholder="Введите номер">
+                            <button class="search__content-btn" type="submit">искать</button>
+                        </form>
+                    </div>
+                    <div class="search__content-item" id="tab-2">
+                        <form class="search__content-form" action="#">
+                            <input class="search__content-input" type="text" placeholder="Введите марку">
+                            <button class="search__content-btn" type="submit">искать</button>
+                        </form>
+                    </div>
+                    <div class="search__content-item" id="tab-3">
+                        <form class="search__content-form" action="#">
+                            <input class="search__content-input" type="text" placeholder="Введите название товара">
+                            <button class="search__content-btn" type="submit">искать</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
