--- a/source/index.html
+++ b/source/index.html
@@ -880,8 +880,8 @@
                 </div>
             </div>
             <div class="footer__bottom">
-                <a class="footer__bottem-link" href="#">Договор оферты</a>
-                <a class="footer__bottem-link" href="#">Политика обработки персональных данных</a>
+                <a class="footer__bottom-link" href="#">Договор оферты</a>
+                <a class="footer__bottom-link" href="#">Политика обработки персональных данных</a>
             </div>
         </div>
     </footer>
