Добавляет новые страницы и хлебные крошки

--- a/source/index.html
+++ b/source/index.html
@@ -63,7 +63,7 @@
                         <a class="menu-categories__link" href="#">Катера</a>
                     </li>
                     <li class="menu-categories__item">
-                        <a class="menu-categories__link" href="#">Гидроциклы</a>
+                        <a class="menu-categories__link" href="catalog.html">Гидроциклы</a>
                     </li>
                     <li class="menu-categories__item">
                         <a class="menu-categories__link" href="#">Лодки</a>
