--- a/source/catalog.html
+++ b/source/catalog.html
@@ -98,6 +98,236 @@
         </div>
     </div>
 
+    <section class="catalog">
+        <div class="container">
+            <h2 class="catalog__title">Гидроциклы</h2>
+            <div class="catalog__filter">
+                <div class="catalog__filter-items">
+                    <button>Полноприводные</button>
+                    <button>от 5000</button>
+                    <button>BRP</button>
+                    <button>еще</button>
+                </div>
+                <div class="catalog__filter-btn">
+                    <select>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                    </select>
+                    <button class="catalog__filter-btngrid">
+                        <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="1" y="1" width="21" height="19" stroke="#2F3035" stroke-width="2"/>
+                            <rect x="7" y="6" width="2" height="2" fill="#2F3035" stroke="#2F3035" stroke-width="2"/>
+                            <rect x="7" y="13" width="2" height="2" fill="#2F3035" stroke="#2F3035" stroke-width="2"/>
+                            <rect x="14" y="6" width="2" height="2" fill="#2F3035" stroke="#2F3035" stroke-width="2"/>
+                            <rect x="14" y="13" width="2" height="2" fill="#2F3035" stroke="#2F3035" stroke-width="2"/>
+                        </svg>
+                    </button>
+                    <button class="catalog__filter-btnline">
+                        <svg width="25" height="19" viewBox="0 0 25 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g opacity="1">
+                            <rect x="6" width="19" height="3" rx="1.5" fill="#2F3035"/>
+                            <rect x="6" y="8" width="19" height="3" rx="1.5" fill="#2F3035"/>
+                            <rect x="6" y="16" width="19" height="3" rx="1.5" fill="#2F3035"/>
+                            <rect width="3" height="3" rx="1.5" fill="#2F3035"/>
+                            <rect y="8" width="3" height="3" rx="1.5" fill="#2F3035"/>
+                            <rect y="16" width="3" height="3" rx="1.5" fill="#2F3035"/>
+                            </g>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <div class="catalog__inner">
+                <aside class="catalog__inner-aside">
+
+                </aside>
+                <div class="catalog__inner-list">
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-1.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
+                            <p class="price product-item__price">1 049 500 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item product-item--sale" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-2.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
+                            <p class="price product-item__price">1 049 500 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-3.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 155hp SE Long Blue Metallic</h4>
+                            <p class="price product-item__price">1 100 475 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item product-item--sale" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-4.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTR 230hp X California green </h4>
+                            <p class="price product-item__price">1 323 700 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-5.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTR 230hp STD Black / Gulfstream</h4>
+                            <p class="price product-item__price">1 049 500 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-6.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTX 300hp LTD Liquid Metal</h4>
+                            <p class="price product-item__price">1 543 000 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-7.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP SeaDoo Spark 60hp 2 up</h4>
+                            <p class="price product-item__price">732 345 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item product-item--sale" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-8.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP SeaDoo Spark GTS 90hp Rental</h4>
+                            <p class="price product-item__price">857 666 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-9.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP SeaDoo WAKE 230hp PRO Teal blue
+                            </h4>
+                            <p class="price product-item__price">1 229 711 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-10.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл Spark 2-UP 900 Ho Ace Chili Pepper</h4>
+                            <p class="price product-item__price">587 440 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item product-item--sale" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-11.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл Spark 2-UP 900 Ho Ace Pineapple </h4>
+                            <p class="price product-item__price">587 440 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+                    <div class="product-item__wrapper">
+                        <button class="product-item__favorite"></button>
+                        <button class="product-item__basket">
+                            <img src="img/icon-basket-white.svg" alt="basket">
+                        </button>
+                        <a class="product-item__notify-link" href="#"><span>Сообщить о поступлении</span></a>
+                        <a class="product-item" href="#">
+                            <p class="product-item__hover-text">посмотреть товар</p>
+                            <img class="product-item__img" src="img/content/gidrotsikl-12.png" alt="product">
+                            <h4 class="product-item__title">Гидроцикл BRP Sea-doo Spark 2-UP 900 Ace Vanilla</h4>
+                            <p class="price product-item__price">1 049 500 ₽</p>
+                            <p class="product-item__notify-text">нет в наличии</p>
+                        </a>
+                    </div>
+
+                    <div class="pagination">
+                        <ul class="pagination-list">
+                            <li class="pagination-list__item active"><a href="#">1</a></li>
+                            <li class="pagination-list__item"><a href="#">2</a></li>
+                            <li class="pagination-list__item"><a href="#">3</a></li>
+                            <li class="pagination-list__item"><a href="#">4</a></li>
+                            <li class="pagination-list__item"><a href="#">5</a></li>
+                            <li class="pagination-list__item pagination-list__item--dots"><span>...</span></li>
+                            <li class="pagination-list__item"><a href="#">11</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="footer__top">
