Подключены плагины для стилизации формы с фильтрацией, оформлен первый блок в этой форме

--- a/source/index.html
+++ b/source/index.html
@@ -888,6 +888,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.rateyo.min.js"></script>
+    <script src="js/ion.rangeSlider.min.js"></script>
+    <script src="js/jquery.formstyler.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
