--- a/source/catalog.html
+++ b/source/catalog.html
@@ -109,7 +109,7 @@
                     <button>еще</button>
                 </div>
                 <div class="catalog__filter-btn">
-                    <select>
+                    <select class="filter-style">
                         <option value=""></option>
                         <option value=""></option>
                         <option value=""></option>
@@ -138,8 +138,43 @@
                 </div>
             </div>
             <div class="catalog__inner">
-                <aside class="catalog__inner-aside">
-
+                <aside class="catalog__inner-aside aside-filter">
+                    <div class="tabs-wrapper">
+                        <div class="tabs aside-filter__tabs">
+                            <a class="tab aside-filter__tab tab--active" href="#"><span>Параметры</span></a>
+                            <a class="tab aside-filter__tab" href="#"><span>по марке</span></a>
+                        </div>
+                        <div class="tabs-container">
+                            <div class="tabs-content aside-filter__tabs-content tabs-content--active">
+                                <form class="aside-filter__form" action="#">
+                                    <ul class="aside-filter__list">
+                                        <li class="aside-filter__item-drop">
+                                            <p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Наличие</p>
+                                            <div class="aside-filter__content">
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        В наличие</label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        Под заказ</label>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="aside-filter__item-drop"></li>
+                                        <li class="aside-filter__item-drop"></li>
+                                        <li class="aside-filter__item-list"></li>
+                                        <li class="aside-filter__item"></li>
+                                        <li class="aside-filter__item"></li>
+                                        <li class="aside-filter__item"></li>
+                                    </ul>
+                                </form>
+                            </div>
+                            <div class="tabs-content aside-filter__tabs-content"></div>
+                        </div>
+                    </div>
                 </aside>
                 <div class="catalog__inner-list">
                     <div class="product-item__wrapper">
@@ -409,6 +444,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.rateyo.min.js"></script>
+    <script src="js/ion.rangeSlider.min.js"></script>
+    <script src="js/jquery.formstyler.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
