--- a/source/catalog.html
+++ b/source/catalog.html
@@ -109,12 +109,12 @@
                     <button>еще</button>
                 </div>
                 <div class="catalog__filter-btn">
-                    <select class="filter-style">
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
+                    <select class="filter-style select-item">
+                        <option>По полулярности</option>
+                        <option>По цене</option>
+                        <option>По мощности</option>
                     </select>
-                    <button class="catalog__filter-btngrid">
+                    <button class="catalog__filter-button catalog__filter-btngrid catalog__filter-button--active">
                         <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="1" y="1" width="21" height="19" stroke="#2F3035" stroke-width="2"/>
                             <rect x="7" y="6" width="2" height="2" fill="#2F3035" stroke="#2F3035" stroke-width="2"/>
@@ -123,8 +123,8 @@
                             <rect x="14" y="13" width="2" height="2" fill="#2F3035" stroke="#2F3035" stroke-width="2"/>
                         </svg>
                     </button>
-                    <button class="catalog__filter-btnline">
-                        <svg width="25" height="19" viewBox="0 0 25 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <button class="catalog__filter-button catalog__filter-btnline">
+                        <svg width="25" height="21" viewBox="0 0 25 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g opacity="1">
                             <rect x="6" width="19" height="3" rx="1.5" fill="#2F3035"/>
                             <rect x="6" y="8" width="19" height="3" rx="1.5" fill="#2F3035"/>
@@ -335,10 +335,16 @@
                                                 </div>
                                             </div>
                                         </li>
+                                        <li class="aside-filter__item-drop aside-filter__item-btn">
+                                            <button class="filter-btn__send filter-btn__send--active" type="submit">ВЫБРАТЬ</button>
+                                            <p class="filter__extra">Дополнительные параметры</p>
+                                            <div class="filter__extra-content">more</div>
+                                            <button class="filter-btn__reset" type="submit">Сбросить фильтр</button>
+                                        </li>
                                     </ul>
                                 </form>
                             </div>
-                            <div class="tabs-content aside-filter__tabs-content"></div>
+                            <div class="tabs-content aside-filter__tabs-content">content-2</div>
                         </div>
                     </div>
                 </aside>
