--- a/source/product-page.html
+++ b/source/product-page.html
@@ -114,15 +114,15 @@
                     <h1 class="product-card__title">Гидроцикл BRP SeaDoo GTI 155hp SE Long Blue Metallic</h1>
                     <p class="product-card__code">Код товара: 366666-2 </p>
                     <div class="product-card__buttons">
-                        <button class="product-card__icon-favorite">
+                        <a class="product-card__icon-favorite" href="#">
                             <img src="img/heart-icon.svg" alt="like">
-                        </button>
-                        <button class="product-card__icon-comparison">
+                        </a>
+                        <a class="product-card__icon-comparison" href="#">
                             <img src="img/comparison.svg" alt="comparison">
-                        </button>
-                        <div class="rate">
-
-                        </div>
+                        </a>
+                        <a class="rate" href="#">
+                            <div class="rate-yo" data-rateyo-rating="4"></div>
+                        </a>
                     </div>
                     <div class="tabs-wrapper product-card__tabs">
                         <div class="tabs">
