--- a/source/index.html
+++ b/source/index.html
@@ -16,6 +16,11 @@
             <div class="container">
                 <div class="header__top-inner">
                     <nav class="menu">
+                        <button class="menu__btn">
+                            <div class="menu__btn-line"></div>
+                            <div class="menu__btn-line"></div>
+                            <div class="menu__btn-line"></div>
+                        </button>
                         <ul class="menu__list">
                             <li class="menu__item">
                                 <a class="menu__link" href="#">Магазины</a>
@@ -55,6 +60,104 @@
                 </div>
             </div>
         </div>
+        <ul class="menu-mobile__list">
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/user-icon.svg" alt="" class="menu-mobile__img">
+                    <p>Войти</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/user-icon.svg" alt="" class="menu-mobile__img">
+                    <p>Регистрация</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/heart-icon.svg" alt="" class="menu-mobile__img">
+                    <p>Избранное</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/basket-icon.svg" alt="" class="menu-mobile__img">
+                    <p>Корзина</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/home.svg" alt="" class="menu-mobile__img">
+                    <p>Магазины</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/procent.svg" alt="" class="menu-mobile__img">
+                    <p>Акции</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/box.svg" alt="" class="menu-mobile__img">
+                    <p>Доставка и оплата</p>
+                </a>
+            </li>
+
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Квадроциклы</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Катера</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Гидроциклы</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Лодки</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Вездеходы</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Снегоходы</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Двигатели</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Запчасти</p>
+                </a>
+            </li>
+        </ul>
+        <div class="menu__mobile-linewrapper">
+            <ul class="menu__mobile-line">
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Магазины</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Акции</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Доставка и оплата</a>
+                </li>
+            </ul>
+        </div>
         <div class="header__bottom">
             <div class="container">
                 <ul class="menu-categories">
@@ -86,6 +189,8 @@
             </div>
         </div>
     </header>
+
+    <!--
 
     <section class="banner-section page-section">
         <div class="container">
@@ -919,6 +1024,7 @@
             </div>
         </div>
     </footer>
+    -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
@@ -929,12 +1035,3 @@
 </body>
 
 </html>
-
-<!-- <div class="tabs-wrapper">
-    <div class="tabs">
-        <a class="tab tab--active" href="#"></a>
-    </div>
-    <div class="tabs-container">
-        <div class="tabs-content"></div>
-    </div>
-</div> -->
