--- a/source/index.html
+++ b/source/index.html
@@ -231,14 +231,16 @@
             </div>
         </div>
     </section>
-<!--
+
     <section class="search page-section">
         <div class="container">
             <div class="search__inner">
                 <div class="search__tabs tabs-wrapper">
-                    <a class="tab search__tabs-item tab--active" href="#tab-1">Поиск по номеру</a>
-                    <a class="tab search__tabs-item" href="#tab-2">Поиск по марке</a>
-                    <a class="tab search__tabs-item" href="#tab-3">Поиск по названию товара</a>
+                    <div class="mobile-overflow">
+                        <a class="tab search__tabs-item tab--active" href="#tab-1">Поиск по номеру</a>
+                        <a class="tab search__tabs-item" href="#tab-2">Поиск по марке</a>
+                        <a class="tab search__tabs-item" href="#tab-3">Поиск по названию товара</a>
+                    </div>
                 </div>
                 <div class="search__content">
                     <div class="tabs-content search__content-item tabs-content--active" id="tab-1">
@@ -325,6 +327,7 @@
         </div>
     </section>
 
+    <!--
     <section class="products page-section">
         <div class="container">
             <div class="products__inner">
