--- a/source/product-page.html
+++ b/source/product-page.html
@@ -28,7 +28,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <a class="logo" href="#">
+                    <a class="logo" href="index.html">
                         <img src="img/logo.svg" alt="" class="logo__img">
                     </a>
                     <div class="header__box">
