--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,6 +16,11 @@
             <div class="container">
                 <div class="header__top-inner">
                     <nav class="menu">
+                        <button class="menu__btn">
+                            <div class="menu__btn-line"></div>
+                            <div class="menu__btn-line"></div>
+                            <div class="menu__btn-line"></div>
+                        </button>
                         <ul class="menu__list">
                             <li class="menu__item">
                                 <a class="menu__link" href="#">Магазины</a>
@@ -55,6 +60,104 @@
                 </div>
             </div>
         </div>
+        <ul class="menu-mobile__list">
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/user-icon.svg" alt="" class="menu-mobile__img">
+                    <p>Войти</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/user-icon.svg" alt="" class="menu-mobile__img">
+                    <p>Регистрация</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/heart-icon.svg" alt="" class="menu-mobile__img">
+                    <p>Избранное</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/basket-icon.svg" alt="" class="menu-mobile__img">
+                    <p>Корзина</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/home.svg" alt="" class="menu-mobile__img">
+                    <p>Магазины</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/procent.svg" alt="" class="menu-mobile__img">
+                    <p>Акции</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <img src="img/box.svg" alt="" class="menu-mobile__img">
+                    <p>Доставка и оплата</p>
+                </a>
+            </li>
+
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Квадроциклы</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Катера</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Гидроциклы</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Лодки</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Вездеходы</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Снегоходы</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Двигатели</p>
+                </a>
+            </li>
+            <li class="menu-mobile__item">
+                <a href="#" class="menu-mobile__link">
+                    <p>Запчасти</p>
+                </a>
+            </li>
+        </ul>
+        <div class="menu__mobile-linewrapper">
+            <ul class="menu__mobile-line">
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Магазины</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Акции</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Доставка и оплата</a>
+                </li>
+            </ul>
+        </div>
         <div class="header__bottom">
             <div class="container">
                 <ul class="menu-categories">
@@ -89,14 +192,16 @@
 
     <div class="breadcrumbs">
         <div class="container">
-            <ul class="breadcrumbs__list">
-                <li class="breadcrumbs__list-item">
-                    <a href="#">Каталог</a>
-                </li>
-                <li class="breadcrumbs__list-item">
-                    <span>Гидроциклы</span>
-                </li>
-            </ul>
+            <div class="breadcrumbs__inner">
+                <ul class="breadcrumbs__list mobile-overflow">
+                    <li class="breadcrumbs__list-item">
+                        <a href="#">Каталог</a>
+                    </li>
+                    <li class="breadcrumbs__list-item">
+                        <span>Гидроциклы</span>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -104,11 +209,13 @@
         <div class="container">
             <h2 class="catalog__title">Гидроциклы</h2>
             <div class="catalog__filter">
-                <div class="catalog__filter-items">
-                    <button>Полноприводные</button>
-                    <button>от 5000</button>
-                    <button>BRP</button>
-                    <button>еще</button>
+                <div class="catalog__filter-itemsinner">
+                    <div class="catalog__filter-items mobile-overflow">
+                        <button>Полноприводные</button>
+                        <button>от 5000</button>
+                        <button>BRP</button>
+                        <button>еще</button>
+                    </div>
                 </div>
                 <div class="catalog__filter-btn">
                     <select class="filter-style select-item">
@@ -140,8 +247,9 @@
                 </div>
             </div>
             <div class="catalog__inner">
+                <div class="aside__btn">Фильтр</div>
                 <aside class="catalog__inner-aside aside-filter">
-                    <div class="tabs-wrapper">
+                    <div class="tabs-wrapper tabs-wrapper--no-scroll">
                         <div class="tabs aside-filter__tabs">
                             <a class="tab aside-filter__tab tab--active" href="#filter-1"><span>Параметры</span></a>
                             <a class="tab aside-filter__tab" href="#filter-2"><span>по марке</span></a>
@@ -561,8 +669,8 @@
                             <button class="footer-form__btn" type="submit">Отправить</button>
                         </form>
                     </div>
-                    <div class="footer__top-item">
-                        <h6 class="footer__top-title">Информация</h6>
+                    <div class="footer__top-item footer__top-itemdrop">
+                        <h6 class="footer__top-title footer__topdrop">Информация</h6>
                         <ul class="footer-list">
                             <li class="footer-list__item">
                                 <a href="#">О компании</a>
@@ -579,7 +687,7 @@
                         </ul>
                     </div>
                     <div class="footer__top-item">
-                        <h6 class="footer__top-title">Интернет-магазин</h6>
+                        <h6 class="footer__top-title footer__topdrop">Интернет-магазин</h6>
                         <ul class="footer-list">
                             <li class="footer-list__item">
                                 <a href="#">Доставка и самовывоз</a>
